<resources>
    <string name="app_name">KotlinUberClone</string>
    <string name="sign_with_phone">Iniciar sesión con el teléfono</string>
    <string name="sign_with_google">Iniciar sesión con google</string>
    <string name="continue_text">CONTINUAR</string>
    <string name="register_text">REGISTRAR</string>
    <string name="firs_name">Primer Nombre</string>
    <string name="last_name">Primer Apellido</string>
    <string name="phone_number">Numero Celular</string>
    <string name="title_activity_driver_home">DriverHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_exit">Salir</string>
    <string name="title_activity_maps">Map</string>
</resources>